---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: ????
  Bugfixes:
    - Fixed that "show playtime in days" did not display correctly for anything beyond one day. (#5)
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 2024-10-15
  Changes:
    - Updated to Factorio 2.0.
    - Changed default value of "adjust for fps/ups indicator" to false.
  Bugfixes:
    - Fixed incorrect localisation for playtime-in-days feature.
    - Fixed that the day counter did not account for ticks_per_day on the surface. (#3)
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 2023-12-20
  Features:
    - Added a per-player setting to show game playtime in days. (#2)
  Changes:
    - The GUI will be hidden while in a cutscene. (#1)
  Bugfixes:
    - Fixed that some mod settings had two info icons.
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2022-02-03
  Bugfixes:
    - Fixed a crash when the Stats GUI window is destroyed by another mod
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2022-01-26
  Features:
    - Added setting to adjust GUI position for the clock
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2021-08-15
  Features:
    - Added position sensor (disabled by default)
    - Research finished sensor will show an infinity symbol if no progress is being made
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2021-03-11
  Features:
    - Added a setting to fill the space where the FPS/UPS indicator should be, for those who play without it